--- a/wikipedia.html
+++ b/wikipedia.html
@@ -20,21 +20,14 @@
   </div>
 
   <nav class="menu">
-    <table>
-      <tr>
-        <th>Contents</th>
-      </tr>
-      <tr>
-        <td>
-            <ol>
-                <li><a href="#sec1">Claimed Origins</a></li>
-                <li><a href="#sec2">Precedents in the South</a></li>
-                <li><a href="#sec3">Precedents in the North</a></li>
-                <li><a href="#sec4">Early national history</a></li>
-            </ol>
-        </td>
-      </tr>
-    </table>
+    <h2>Contents</h2>
+      <ol>
+          <li><a href="#sec1">Claimed Origins</a></li>
+          <li><a href="#sec2">Precedents in the South</a></li>
+          <li><a href="#sec3">Precedents in the North</a></li>
+          <li><a href="#sec4">Early national history</a></li>
+          <li><a href="#sec5">Observance dates</a></li>
+      </ol>
   </nav>
 
   <h2 id="sec1">Claimed Origins</h2>
@@ -52,11 +45,48 @@
 
   <h2 id="sec4">Early national history</h2>
   <hr>
-  <p>In April 1865, following <a href="https://en.wikipedia.org/wiki/Abraham_Lincoln#Assassination">Lincoln's assassination</a>, commemorations were widespread. The more than 600,000 soldiers of both sides who died in the Civil War meant that burial and memorialization took on new cultural significance. Under the leadership of women during the war, an increasingly formal practice of decorating graves had taken shape. In 1865, the federal government also began creating the <a href="https://en.wikipedia.org/wiki/United_States_National_Cemetery_System">United States National Cemetery System</a> for the Union war dead.[51]</p>
+  <p>In April 1865, following <a href="https://en.wikipedia.org/wiki/Abraham_Lincoln#Assassination">Lincoln's assassination</a>, commemorations were widespread. The more than 600,000 soldiers of both sides who died in the Civil War meant that burial and memorialization took on new cultural significance. Under the leadership of women during the war, an increasingly formal practice of decorating graves had taken shape. In 1865, the federal government also began creating the <a href="https://en.wikipedia.org/wiki/United_States_National_Cemetery_System">United States National Cemetery System</a> for the Union war dead.<sup>[51]</sup></p>
   <p>By the 1880s, ceremonies were becoming more consistent across geography as the GAR provided handbooks that presented specific procedures, poems, and Bible verses for local post commanders to utilize in planning the local event. Historian Stuart McConnell reports:</p>
   <div class="quote" align="middle">
     <p>on the day itself, the post assembled and marched to the local cemetery to decorate the graves of the fallen, an enterprise meticulously organized months in advance to assure that none were missed. Finally came a simple and subdued graveyard service involving prayers, short patriotic speeches, and music … and at the end perhaps a rifle salute.<sup>[52]</sup></p>
   </div>
+
+  <h2 id="sec5">Observance dates (1971 - present)</h2>
+  <hr>
+  <table>
+      <tr>
+          <th>Year</th>
+          <th style="display: table-header-group">Memorial Day</th>
+      </tr>
+      <tr>
+          <td>1971 | 1976 | 1982 | x | 1993 | 1999 | 2004 | 2010 | x | 2021 | 2027 </td>
+          <td>May 31 (week 22)</td>
+      </tr>
+      <tr>
+          <td>x | 1977 | 1983 | 1988 | 1994 | x | 2005 | 2011 | 2016 | 2022 | x </td>
+          <td>May 30 (week 22)</td>
+      </tr>
+      <tr>
+          <td>1972 | 1978 | x | 1989 | 1995 | 2000 | 2006 | x | 2017 | 2023 | 2028 </td>
+          <td>May 29 (week 22)</td>
+      </tr>
+      <tr>
+          <td>1973 | 1979 | 1984 | 1990 | x | 2001 | 2007 | 2012 | 2018 | x | 2029 </td>
+          <td>May 28 (week 22)</td>
+      </tr>
+      <tr>
+          <td>1947 | x | 1985 | 1991 | 1996 | 2002 | x | 2013 | 2019 | 2024 | 2030 </td>
+          <td>May 27 (common year week 21, leap year week 22)</td>
+      </tr>
+      <tr>
+          <td>1975 | 1980 | 1986 | x | 1997 | 2003 | 2008 | 2014 | x | 2025 | 2031</td>
+          <td>May 26 (week 21)</td>
+      </tr>
+      <tr>
+          <td>x | 1981 | 1987 | 1992 | 1998 | x | 2009 | 2015 | 2020 | 2026 | x</td>
+          <td>May 25 (week 21)</td>
+      </tr>
+  </table>
 
 </body>
 
