--- a/wikipedia.html
+++ b/wikipedia.html
@@ -4,16 +4,21 @@
 <head>
     <title>Memorial Day - Wikipedia</title>
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/8/80/Wikipedia-logo-v2.svg">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function(){
+            $('.alert').hide();
             $('button').click(function(){
                 $('.menu').slideToggle();
+                $('.alert').show();
                 if($(this).text() == 'Hide Table of Contents'){
                     $(this).text('Show Table of Contents');
                 } else {
                     $(this).text('Hide Table of Contents');
+                    $('.alert').hide();
                 }
             });
         });
@@ -135,6 +140,11 @@
       </ol>
   </nav>
   <button>Hide Table of Contents</button>
+
+  <div class="alert alert-success alert-dismissible">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <strong>Success!</strong> The table of contents was hidden.
+  </div>
 
   <h2 id="sec1">Claimed Origins</h2>
   <hr>
