--- a/wikipedia.html
+++ b/wikipedia.html
@@ -4,14 +4,16 @@
 <head>
     <title>Memorial Day - Wikipedia</title>
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/8/80/Wikipedia-logo-v2.svg">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
     <script>
         $(document).ready(function(){
             $('.alert').hide();
-            $('button').click(function(){
+            $('.menu_button').click(function(){
                 $('.menu').slideToggle();
                 $('.alert').show();
                 if($(this).text() == 'Hide Table of Contents'){
@@ -85,6 +87,31 @@
 </head>
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="https://en.wikipedia.org/wiki/Main_Page">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://en.wikipedia.org/wiki/Main_Page">Main Page</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://en.wikipedia.org/wiki/Wikipedia:Contents">Contents</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://en.wikipedia.org/wiki/Portal:Current_events">Current Events</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://en.wikipedia.org/wiki/Wikipedia:About">About</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
   <h1 class="title">Memorial Day</h1>
   <hr>
@@ -102,7 +129,7 @@
        <div class="title_box">
            <h4>Memorial Day</h4>
        </div>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Graves_at_Arlington_on_Memorial_Day.JPG" alt="Graves at Arlington National Cemetery on Memorial Day" height="50%">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Graves_at_Arlington_on_Memorial_Day.JPG" class="rounded" alt="Graves at Arlington National Cemetery on Memorial Day" height="50%">
          <p>The gravestones at <a href="https://en.wikipedia.org/wiki/Arlington_National_Cemetery">Arlington National Cemetery</a> are decorated by U.S. flags on Memorial Day weekend in 2008.</p>
          <table>
              <tr>
@@ -139,7 +166,7 @@
           <li><a href="#sec5">Observance dates</a></li>
       </ol>
   </nav>
-  <button>Hide Table of Contents</button>
+  <button class="menu_button">Hide Table of Contents</button>
 
   <div class="alert alert-success alert-dismissible">
       <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
