--- a/wikipedia.html
+++ b/wikipedia.html
@@ -35,10 +35,6 @@
             text-align: left;
         }
 
-       .img_box, #dates { /* selector1, selector2  & #id */
-            border: 1px solid black; /* border */
-        }
-
         a[href*="#sec"]:hover { /* [attribute], [attribute=value] */
             color: pink; /* color */
         }
@@ -86,7 +82,10 @@
 
 </head>
 
+<!-- Body -->
 <body>
+
+<!-- Nav Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -113,79 +112,95 @@
     </div>
 </nav>
 
-  <h1 class="title">Memorial Day</h1>
+<!-- Introduction -->
   <hr>
-  <div class="introduction">
+  <div class="container">
+    <div class="introduction">
+      <div class="col-8">
+          <h1 class="title">Memorial Day</h1>
+          <div class="intro_text">
+            <p>Memorial Day (originally known as Decoration Day<sup>[1]</sup>) is a <a href="https://en.wikipedia.org/wiki/Federal_holidays_in_the_United_States">federal holiday in the United States</a> for honoring and mourning the military personnel who have died in the performance of their military duties.<sup>[2]</sup> The holiday is <a href="https://en.wikipedia.org/wiki/Uniform_Monday_Holiday_Act">observed</a> on the last Monday of May. The holiday was observed on May 30 from 1868 to 1970.<sup>[3]</sup> </p>
+            <p> On May 1, 1865 in Charleston, SC, formerly enslaved African Americans honored hundreds of Black soldiers who were killed in the Civil War and buried in a mass grave. They unearthed the bodies and gave each a proper burial and held a parade in the soldiers' honor.<sup>[4]</sup>This memorial honoring of Black fallen soldiers is believed to have been the first Memorial Day before it later became a recognized holiday. </p>
+            <p>Many people visit cemeteries and memorials on Memorial Day to honor and mourn those who died while serving in the U.S. military. Many volunteers place an American flag on graves of military personnel in <a href="https://en.wikipedia.org/wiki/United_States_National_Cemetery_System">national cemeteries</a>. Memorial Day is also considered the unofficial beginning of <a href="https://en.wikipedia.org/wiki/Summer">summer</a> in the United States,<sup>[5]</sup> while <a href="https://en.wikipedia.org/wiki/Labor_Day">Labor Day</a>, the first Monday of September, marks the unofficial start of <a href="https://en.wikipedia.org/wiki/Autumn">autumn</a>a and the end of the summer. </p>
+            <p> After the Charleston memorial in 1865, many cities and individuals claimed to have been the first to celebrate the event. In 1868, General <a href="https://en.wikipedia.org/wiki/John_A._Logan">John A. Logan</a>of the <a href="https://en.wikipedia.org/wiki/Grand_Army_of_the_Republic">Grand Army of the Republic</a> called for a "Decoration Day", which was widely celebrated. By 1890, every Northern state had adopted it as a holiday. The World Wars turned it into a generalized day of remembrance, instead of just for the Civil War. In 1971, Congress standardized the holiday as "Memorial Day" and changed its observance. </p>
+            <p> Two other days celebrate those who have served or are serving in the U.S. military: <a href="https://en.wikipedia.org/wiki/Armed_Forces_Day#United_States">Armed Forces Day</a> (which is earlier in May), an unofficial U.S. holiday for honoring those currently serving in the armed forces, and <a href="https://en.wikipedia.org/wiki/Veterans_Day">Veterans Day</a> (on November 11), which honors those who have served in the <a href="https://en.wikipedia.org/wiki/United_States_Armed_Forces">United States Armed Forces</a>.<sup>[6]</sup></p>
+          </div>
+          <!-- Table of Contents -->
+          <nav class="menu">
+            <h2>Contents</h2>
+              <ol>
+                  <li><a href="#sec1">Claimed Origins</a></li>
+                  <li><a href="#sec2">Precedents in the South</a></li>
+                  <li><a href="#sec3">Precedents in the North</a></li>
+                  <li><a href="#sec4">Early national history</a></li>
+                  <li><a href="#sec5">Observance dates</a></li>
+              </ol>
+          </nav>
 
-    <div class="intro_text">
-      <p>Memorial Day (originally known as Decoration Day<sup>[1]</sup>) is a <a href="https://en.wikipedia.org/wiki/Federal_holidays_in_the_United_States">federal holiday in the United States</a> for honoring and mourning the military personnel who have died in the performance of their military duties.<sup>[2]</sup> The holiday is <a href="https://en.wikipedia.org/wiki/Uniform_Monday_Holiday_Act">observed</a> on the last Monday of May. The holiday was observed on May 30 from 1868 to 1970.<sup>[3]</sup> </p>
-      <p> On May 1, 1865 in Charleston, SC, formerly enslaved African Americans honored hundreds of Black soldiers who were killed in the Civil War and buried in a mass grave. They unearthed the bodies and gave each a proper burial and held a parade in the soldiers' honor.<sup>[4]</sup>This memorial honoring of Black fallen soldiers is believed to have been the first Memorial Day before it later became a recognized holiday. </p>
-      <p>Many people visit cemeteries and memorials on Memorial Day to honor and mourn those who died while serving in the U.S. military. Many volunteers place an American flag on graves of military personnel in <a href="https://en.wikipedia.org/wiki/United_States_National_Cemetery_System">national cemeteries</a>. Memorial Day is also considered the unofficial beginning of <a href="https://en.wikipedia.org/wiki/Summer">summer</a> in the United States,<sup>[5]</sup> while <a href="https://en.wikipedia.org/wiki/Labor_Day">Labor Day</a>, the first Monday of September, marks the unofficial start of <a href="https://en.wikipedia.org/wiki/Autumn">autumn</a>a and the end of the summer. </p>
-      <p> After the Charleston memorial in 1865, many cities and individuals claimed to have been the first to celebrate the event. In 1868, General <a href="https://en.wikipedia.org/wiki/John_A._Logan">John A. Logan</a>of the <a href="https://en.wikipedia.org/wiki/Grand_Army_of_the_Republic">Grand Army of the Republic</a> called for a "Decoration Day", which was widely celebrated. By 1890, every Northern state had adopted it as a holiday. The World Wars turned it into a generalized day of remembrance, instead of just for the Civil War. In 1971, Congress standardized the holiday as "Memorial Day" and changed its observance. </p>
-      <p> Two other days celebrate those who have served or are serving in the U.S. military: <a href="https://en.wikipedia.org/wiki/Armed_Forces_Day#United_States">Armed Forces Day</a> (which is earlier in May), an unofficial U.S. holiday for honoring those currently serving in the armed forces, and <a href="https://en.wikipedia.org/wiki/Veterans_Day">Veterans Day</a> (on November 11), which honors those who have served in the <a href="https://en.wikipedia.org/wiki/United_States_Armed_Forces">United States Armed Forces</a>.<sup>[6]</sup></p>
-    </div>
+          <!-- Menu Button -->
+          <button class="menu_button">Hide Table of Contents</button>
 
-     <div class="img_box">
-       <div class="title_box">
-           <h4>Memorial Day</h4>
-       </div>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Graves_at_Arlington_on_Memorial_Day.JPG" class="rounded" alt="Graves at Arlington National Cemetery on Memorial Day" height="50%">
+          <!-- Alert -->
+          <div class="alert alert-success alert-dismissible">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <strong>Success!</strong> The table of contents was hidden.
+          </div>
+      </div>
+
+        <!-- Image column -->
+        <div class="col-4">
+        <div class="img_box border border-dark">
+          <div class="title_box">
+            <h4>Memorial Day</h4>
+          </div>
+         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Graves_at_Arlington_on_Memorial_Day.JPG" class="rounded" alt="Graves at Arlington National Cemetery on Memorial Day" height="50%">
+
+          <!-- Image Description -->
          <p>The gravestones at <a href="https://en.wikipedia.org/wiki/Arlington_National_Cemetery">Arlington National Cemetery</a> are decorated by U.S. flags on Memorial Day weekend in 2008.</p>
          <table>
-             <tr>
-                 <th>Official Name</th>
-                 <td style="display: table-header-group">Memorial Day</td>
-             </tr>
-             <tr>
-                 <th>Observed by</th>
-                 <td style="display: table-header-group">Americans</td>
-             </tr>
-             <tr>
-                 <th>Type</th>
-                 <td style="display: table-header-group">National</td>
-             </tr>
-             <tr>
-                 <th>Date</th>
-                 <td style="display: table-header-group">Last Monday in May</td>
-             </tr>
-             <tr>
-                 <th>Frequency</th>
-                 <td style="display: table-header-group">Annual</td>
-             </tr>
+           <tr>
+               <th>Official Name</th>
+               <td style="display: table-header-group">Memorial Day</td>
+           </tr>
+           <tr>
+               <th>Observed by</th>
+               <td style="display: table-header-group">Americans</td>
+           </tr>
+           <tr>
+               <th>Type</th>
+               <td style="display: table-header-group">National</td>
+           </tr>
+           <tr>
+               <th>Date</th>
+               <td style="display: table-header-group">Last Monday in May</td>
+           </tr>
+           <tr>
+               <th>Frequency</th>
+               <td style="display: table-header-group">Annual</td>
+           </tr>
          </table>
-     </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <nav class="menu">
-    <h2>Contents</h2>
-      <ol>
-          <li><a href="#sec1">Claimed Origins</a></li>
-          <li><a href="#sec2">Precedents in the South</a></li>
-          <li><a href="#sec3">Precedents in the North</a></li>
-          <li><a href="#sec4">Early national history</a></li>
-          <li><a href="#sec5">Observance dates</a></li>
-      </ol>
-  </nav>
-  <button class="menu_button">Hide Table of Contents</button>
-
-  <div class="alert alert-success alert-dismissible">
-      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-      <strong>Success!</strong> The table of contents was hidden.
-  </div>
-
+  <!-- Section 1 -->
   <h2 id="sec1">Claimed Origins</h2>
   <hr>
   <p>The history of Memorial Day in the United States is complex. The U.S. Department of Veterans' Affairs recognizes that approximately 25 places claim to have originated the holiday.<sup>[7]</sup> At <a href="https://en.wikipedia.org/wiki/Columbus_State_University">Columbus [Georgia] State University</a> there is a <a href="https://tlc.columbusstate.edu/">Center for Memorial Day Research</a>, and the <a href="https://en.wikipedia.org/wiki/University_of_Mississippi">University of Mississippi</a> incorporates a Center for Civil War Research that has also led research into Memorial Day's origins.<sup>[8]</sup> The practice of decorating soldiers' graves with flowers is an ancient custom.<sup>[9]</sup> Soldiers' graves were decorated in the U.S. before<sup>[10]</sup> and during the <a href="https://en.wikipedia.org/wiki/American_Civil_War">American Civil War</a>. Many of the origination claims are myths, unsupported by evidence, while others are one-time cemetery dedications or funeral tributes. In 2014, one scholarly effort attempted to separate the myths and one-time events from the activities that actually led to the establishment of the federal holiday.<sup>[11]</sup></p>
 
+  <!-- Section 2 -->
   <h2 id="sec2">Precedents in the South</h2>
   <hr>
   <p>According to the <a href="https://en.wikipedia.org/wiki/Library_of_Congress">United States Library of Congress</a> website, "Southern women decorated the graves of soldiers even before the Civil War's end. Records show that by 1865, Mississippi, Virginia, and South Carolina all had precedents for Memorial Day."<sup>[12]</sup>The earliest Southern Memorial Day celebrations were simple, somber occasions for veterans and their families to honor the dead and tend to local cemeteries.<sup>[13]</sup> In following years, the <a href="https://en.wikipedia.org/wiki/Ladies%27_Memorial_Association">Ladies' Memorial Association</a> and other groups increasingly focused rituals on preserving Confederate Culture and the <a href="https://en.wikipedia.org/wiki/Lost_Cause_of_the_Confederacy">Lost Cause of the Confederacy</a> narrative.<sup>[14]</sup></p>
 
+  <!-- Section 3 -->
   <h2 id="sec3">Precedents in the North</h2>
   <hr>
   <h3>Gettysburg, Pennsylvania</h3>
   <p>The 1863 cemetery dedication at <a href="https://en.wikipedia.org/wiki/Gettysburg,_Pennsylvania">Gettysburg, Pennsylvania</a> included a ceremony of commemoration at the graves of dead soldiers. Some have therefore claimed that President <a href="https://en.wikipedia.org/wiki/Abraham_Lincoln">Abraham Lincoln</a> was the founder of Memorial Day.<sup>[34]</sup> However, Chicago journalist Lloyd Lewis tried to make the case that it was Lincoln's funeral that spurred the soldiers' grave decorating that followed.<sup>[35]</sup></p>
 
+  <!-- Section 4 -->
   <h2 id="sec4">Early national history</h2>
   <hr>
   <p>In April 1865, following <a href="https://en.wikipedia.org/wiki/Abraham_Lincoln#Assassination">Lincoln's assassination</a>, commemorations were widespread. The more than 600,000 soldiers of both sides who died in the Civil War meant that burial and memorialization took on new cultural significance. Under the leadership of women during the war, an increasingly formal practice of decorating graves had taken shape. In 1865, the federal government also began creating the <a href="https://en.wikipedia.org/wiki/United_States_National_Cemetery_System">United States National Cemetery System</a> for the Union war dead.<sup>[51]</sup></p>
@@ -194,9 +209,10 @@
       <p>on the day itself, the post assembled and marched to the local cemetery to decorate the graves of the fallen, an enterprise meticulously organized months in advance to assure that none were missed. Finally came a simple and subdued graveyard service involving prayers, short patriotic speeches, and music ... and at the end perhaps a rifle salute.<sup>[52]</sup></p>
   </div>
 
+  <!-- Section 5 -->
   <h2 id="sec5">Observance dates (1971 - present)</h2>
   <hr>
-  <table id="dates">
+  <table id="dates" class="border border-dark">
       <tr>
           <th>Year</th>
           <th style="display: table-header-group">Memorial Day</th>
@@ -233,6 +249,7 @@
 
 </body>
 
+<!-- Footer -->
 <footer>
     <hr>
     <h6>This page was last edited on <span class="date">31 May 2021, at 19:50 (UTC).</span></h6>
